tests/ui/spirv-attr/invariant-invalid.stderr
error: `#[spirv(invariant)]` is only valid on Output variables
 --> $DIR/invariant-invalid.rs:7:21
  |
7 | pub fn main(#[spirv(invariant)] input: f32) {}
  |                     ^^^^^^^^^

error: aborting due to 1 previous error

